fixed navbar issue (not collapsing onClick)

--- a/Project/zeltlager-app/src/App.scss
+++ b/Project/zeltlager-app/src/App.scss
@@ -1,3 +1,3 @@
 #app {
-  margin-top: 90px; //start content below navbar
+  margin-top: 75px; //start content below navbar
 }
